[gd_scene load_steps=7 format=3 uid="uid://d1vrkfxgttq3c"]

[ext_resource type="Script" uid="uid://cfltnwoeynwn2" path="res://src/main_map.gd" id="1_xf4q7"]
[ext_resource type="Texture2D" uid="uid://d3a0835k1w76s" path="res://file/background/background_layer_1.png" id="2_13gc7"]
[ext_resource type="PackedScene" uid="uid://bgqto2ho3d3ol" path="res://scene/tower.tscn" id="2_hquly"]
[ext_resource type="Texture2D" uid="uid://rucn240baf47" path="res://icon.svg" id="3_4jeie"]
[ext_resource type="Texture2D" uid="uid://tvmpg2wppelu" path="res://file/background/background_layer_2.png" id="3_arx8d"]
[ext_resource type="Texture2D" uid="uid://2ncett1wa7rq" path="res://file/background/background_layer_3.png" id="4_w3aho"]

[node name="MainMap" type="Node2D"]
script = ExtResource("1_xf4q7")

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0
limit_left = 0
limit_top = 0
limit_right = 1000
limit_bottom = 644

[node name="Game Layer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="Background" type="Node2D" parent="Game Layer"]
position = Vector2(576, 325)

[node name="Parallax2D" type="Parallax2D" parent="Game Layer/Background"]
scroll_scale = Vector2(0.5, 0.5)
repeat_size = Vector2(1152, 0)

[node name="Sprite2D" type="Sprite2D" parent="Game Layer/Background/Parallax2D"]
scale = Vector2(3.6, 3.6)
texture = ExtResource("2_13gc7")

[node name="Parallax2D2" type="Parallax2D" parent="Game Layer/Background"]
scroll_scale = Vector2(0.8, 0.8)
repeat_size = Vector2(1152, 0)

[node name="Sprite2D" type="Sprite2D" parent="Game Layer/Background/Parallax2D2"]
scale = Vector2(3.6, 3.6)
texture = ExtResource("3_arx8d")

[node name="Parallax2D3" type="Parallax2D" parent="Game Layer/Background"]
repeat_size = Vector2(1152, 0)

[node name="Sprite2D" type="Sprite2D" parent="Game Layer/Background/Parallax2D3"]
scale = Vector2(3.6, 3.6)
texture = ExtResource("4_w3aho")

[node name="PlayerTower" parent="Game Layer" instance=ExtResource("2_hquly")]
position = Vector2(150, 600)
collision_layer = 10
collision_mask = 4

[node name="EnemyTower" parent="Game Layer" instance=ExtResource("2_hquly")]
position = Vector2(1950, 600)
collision_layer = 12
collision_mask = 2

[node name="UI Layer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="UI Layer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MoneyText" type="Label" parent="UI Layer/UI"]
visible = false
layout_mode = 0
offset_left = 2.0
offset_top = 40.0
offset_right = 42.0
offset_bottom = 63.0
text = "Money:"

[node name="MoneyValue" type="Label" parent="UI Layer/UI"]
visible = false
layout_mode = 0
offset_left = 64.0
offset_top = 40.0
offset_right = 104.0
offset_bottom = 63.0
text = "0"

[node name="MinionButton" type="TextureButton" parent="UI Layer/UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -376.0
offset_right = -296.0
offset_bottom = 80.0
grow_horizontal = 2
texture_normal = ExtResource("3_4jeie")
ignore_texture_size = true
stretch_mode = 4

[connection signal="pressed" from="UI Layer/UI/MinionButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="UI Layer/UI/MinionButton" to="." method="_on_minion_button_pressed"]
